--- a/config/blast-tng.cfg
+++ b/config/blast-tng.cfg
@@ -18,8 +18,8 @@ COOR2_FILE_TYPE: float              #file type for the second coordinate
 
 [RA_DEC Parameters]
 ACSFREQ: 100.                                             #Sampling frequency of the coordinates
-COOR1_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the first coordinate
-COOR2_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the second coordinate
+COOR1_DIR_CONV: 0.0000000055879354,0.                   #conversion value from dirfile to data for the first coordinate
+COOR2_DIR_CONV: 0.0000000838190317,0.                   #conversion value from dirfile to data for the second coordinate
 COOR1_FILE_TYPE: float                                    #file type for the first coordinate
 COOR2_FILE_TYPE: float                                    #file type for the second coordinate
 ACS_SAMP_FRAME: 100                                       #sample in each frame for the coordinates
