Solved some bugs in computing offset

--- a/config/blast-tng.cfg
+++ b/config/blast-tng.cfg
@@ -26,3 +26,12 @@ COOR2_DIR_CONV: 1.,0.                   #conversion value from dirfile to data f
 COOR1_FILE_TYPE: float                                    #file type for the first coordinate
 COOR2_FILE_TYPE: float                                    #file type for the second coordinate
 ACS_SAMP_FRAME: 100
+
+[LST_LAT Parameters]
+LSTLATFREQ: 100.                                           #Sampling frequency of the coordinates
+LST_DIR_CONV: 2.77777777778e-04,0.                   #conversion value from dirfile to data for the first coordinate
+LAT_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
+LST_FILE_TYPE: u32                                    #file type for the first coordinate
+LAT_FILE_TYPE: u32                                    #file type for the second coordinate
+LSTLAT_SAMP_FRAME: 100                                     #sample in each frame for the coordinates
+
