--- a/config/blast-tng.cfg
+++ b/config/blast-tng.cfg
@@ -7,31 +7,44 @@ COOR1_DIR_CONV: 1,0                 #conversion value from dirfile to data for t
 COOR2_DIR_CONV: 1,0                 #conversion value from dirfile to data for the second coordinate
 DET_SAMP_FRAME: 488                 #sample in each frame for the detectors
 ACS_SAMP_FRAME: 100                 #sample in each frame for the coordinates
-DET_FILE_TYPE: s32                  #file type for the detectors
+DET_FILE_TYPE: float                #file type for the detectors
 COOR1_FILE_TYPE: float              #file type for the first coordinate
 COOR2_FILE_TYPE: float              #file type for the second coordinate
 
 [RA_DEC Parameters]
 ACSFREQ: 100.                                             #Sampling frequency of the coordinates
-COOR1_DIR_CONV: 0.0000000055879354,0.                   #conversion value from dirfile to data for the first coordinate
-COOR2_DIR_CONV: 0.0000000838190317,0.                   #conversion value from dirfile to data for the second coordinate
-COOR1_FILE_TYPE: float                                    #file type for the first coordinate
-COOR2_FILE_TYPE: float                                    #file type for the second coordinate
+COOR1_DIR_CONV: 1,0.                   #conversion value from dirfile to data for the first coordinate
+COOR2_DIR_CONV: 1,0.                   #conversion value from dirfile to data for the second coordinate
+COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
+COOR2_FILE_TYPE: s32                                    #file type for the second coordinate
 ACS_SAMP_FRAME: 100                                       #sample in each frame for the coordinates
 
 [AZ_EL Parameters]
-ACSFREQ: 100.                                             #Sampling frequency of the coordinates
+ACSFREQ: 200.                                             #Sampling frequency of the coordinates
 COOR1_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the first coordinate
 COOR2_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the second coordinate
-COOR1_FILE_TYPE: float                                    #file type for the first coordinate
-COOR2_FILE_TYPE: float                                    #file type for the second coordinate
-ACS_SAMP_FRAME: 100
+COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
+COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
+ACS_SAMP_FRAME: 200
+
+[XY_Stage Parameters]
+ACSFREQ: 5.                                             #Sampling frequency of the coordinates
+COOR1_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the first coordinate
+COOR2_DIR_CONV: 1.,0.                   #conversion value from dirfile to data for the second coordinate
+COOR1_FILE_TYPE: u32                                    #file type for the first coordinate
+COOR2_FILE_TYPE: u32                                    #file type for the second coordinate
+ACS_SAMP_FRAME: 5
 
 [LST_LAT Parameters]
 LSTLATFREQ: 100.                                           #Sampling frequency of the coordinates
-LST_DIR_CONV: 2.77777777778e-04,0.                   #conversion value from dirfile to data for the first coordinate
-LAT_DIR_CONV: 8.381903171539e-08,0.                   #conversion value from dirfile to data for the second coordinate
+LST_DIR_CONV: 1,0.                   #conversion value from dirfile to data for the first coordinate
+LAT_DIR_CONV: 1,0.                   #conversion value from dirfile to data for the second coordinate
 LST_FILE_TYPE: u32                                    #file type for the first coordinate
 LAT_FILE_TYPE: s32                                    #file type for the second coordinate
 LSTLAT_SAMP_FRAME: 100                                     #sample in each frame for the coordinates
 
+[HWP Parameters]
+HWPFREQ: 5.                                           #Sampling frequency of the coordinates
+HWP_DIR_CONV: 1,0.                   #conversion value from dirfile to data for the first coordinate
+HWP_FILE_TYPE: u16                                    #file type for the first coordinate
+HWP_SAMP_FRAME: 5                                      #sample in each frame for the coordinates
